update java docs